samples/_failures_safe/1761044300_464ddf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff748018.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_ff748018.c:129:5: error: expected expression at end of input
  129 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_ff748018.c:129:5: error: expected declaration or statement at end of input
